防火墙iptables
iptables
iptables有五个内置规则链（名称需大写），分别为：

PREROUTING 对应 从网卡进入到内核空间中
INPUT 对应 从内核空间到用户空间
FORWARD 对应 从一个网卡转发到另一个网卡
OUTPUT 对应 从用户空间到内核空间
POSTROUTING 对应 从内核空间到网卡

-A （append追加 I insert插入 D drop删除 R 替换）
-p 协议类型 -i -o 匹配流入、流出网卡名 缺省 -s 来源地址 缺省 ！表示除外 --sport 来源端口 --dport 目标端口 -j 执行动作 
-m 模块 （state模块 tcp模块 对应不同功能）

配置允许ssh端口连接
iptables -A INPUT -s 192.168.1.0/24 -p tcp --dport 22 -j ACCEPT

允许本地回环地址可以正常使用
iptables -A INPUT -i lo -j ACCEPT
#本地圆环地址就是那个127.0.0.1，是本机上使用的,它进与出都设置为允许
iptables -A OUTPUT -o lo -j ACCEPT

echo "# Generated by iptables-save v1.4.21 on Wed Apr 22 16:27:45 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p tcp -m tcp --dport 9111 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10051 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10050 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4505 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 4506 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 16000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 16010 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 16001 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 16011 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 26000 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 26010 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 26001 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 26011 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 45685 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
# Completed on Wed Apr 22 16:27:45 2020" > /etc/sysconfig/iptables
